--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>test commit and push</p>
     <p>another test</p>
     <p> hello github</p>
+    <p>another test</p>
+    <p> hello github</p>
 </body>
 </html>
