login and signin scolette

--- a/index.html
+++ b/index.html
@@ -23,16 +23,24 @@
                     Digitale Trainer
                 </a>
                 <form class="d-flex">
-                    <a href="./login.html" class="navbar-brand">
-                        <button class="btn btn-outline-success me-2" type="submit">LogIn</button>
-                    </a>
+
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
 
 
-                    <a href="./signin.html" class="navbar-brand">
-                        <button class="btn btn-outline-danger" type="submit">SignIn</button>
-                    </a>
+                        <button class="btn btn-outline-success me-2 ">
+                            <a href="./login.html" class="navbar-brand">
+                                Log In
+                            </a>
+                        </button>
 
+
+                        <button class="btn btn-outline-danger">
+                            <a href="./signin.html" class="navbar-brand">
+                                Sign In</a>
+                        </button>
+                    </div>
                 </form>
+
             </div>
 
         </nav>
