--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <form action="#" style="max-width: 300px; margin: auto;">
             <img class="mt-4 mb-4" src="./img/logo.png" alt="logo" height="72">
 
-            <h2 class="h3 mb-3 font-weight-normal">Please Sign In</h2>
+            <h2 class="h3 mb-3 font-weight-normal">Log In Here!</h2>
             <!--
             <label for="emailAdress" class="sr-only">Email adress</label>
              -->
