--- a/index.html
+++ b/index.html
@@ -2,59 +2,86 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Digitale Trainer</title>
-  <!--link css bootstrap-->
-  <link rel="stylesheet" href="./style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digitale Trainer</title>
+    <!--link css bootstrap-->
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 
 </head>
 
 <body>
-  <header>
-    <div class="container-fluid banner">
-      <div class="row">
-        <div class="col-md-12">
-          <nav class="navbar navbar-md ">
-            <a class="navbar-brand" href="#" id="responsive-logo">
-              Digitale Trainer
-            </a>
-            <ul class="nav">
+    <header>
+        <div class="container-fluid banner">
+            <div class="row">
+                <div class="col-md-12">
+                    <nav class="navbar navbar-md">
+                        <a class="navbar-brand" href="#" id="responsive-logo">
+                            Digitale Trainer
+                        </a>
+                        <ul class="nav">
 
-              <li class="nav-item">
-                <a class="nav-link" href="./signin.html">Sign In</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./login.html">Log In</a>
-              </li>
-            </ul>
-          </nav>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./signin.html">Sign In</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./login.html">Log In</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="col-md-8 offset-md-2 info">
+                    <h3 class="text-center">Web Training Center</h3>
+                    <p class="text-center">
+                        Launch Your Web Career
+                        From TN'Coders First Professional Web Institute
+                    </p>
+                    <a href="#" class="btn btn-md text-center">More Information</a>
+                </div>
+
+
+
+
+            </div>
         </div>
 
-        <div class="col-md-8 offset-md-2 info">
-          <h3 class="text-center">Web Training Center</h3>
-          <p class="text-center">
-            Launch Your Web Career
-            From TN'Coders First Professional Web Institute
-          </p>
-          <a href="#" class="btn btn-md text-center">More Information</a>
-        </div>
+    </header>
+<!--Home Navbar-->
+<section class="row home">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <div class="container-fluid">
+     
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav nav mx-auto justify-content-between w-50">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">contact</a>
+          </li>
 
-
-
-
+        </ul>
       </div>
     </div>
+  </nav>
 
-  </header>
+</section>
 
 
-
-  <!--Home Navbar-->
-  <!-- 
+<!-- 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
@@ -83,13 +110,13 @@
 https://www.youtube.com/watch?v=180p7GLmMyQ
 -->
 
-  <!--team represent section
+<!--team represent section
 https://www.youtube.com/watch?v=sPfgXzmN7p4
 -->
 
 
-  <!--Slides-->
-  <!-- 
+<!--Slides-->
+    <!-- 
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <ol class="carousel-indicators">
                       <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
@@ -130,18 +157,18 @@ https://www.youtube.com/watch?v=sPfgXzmN7p4
                   </div>
              -->
 
-  <!--contact page-->
+<!--contact page-->
 
-  <!--Bootstrap JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-    integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-    integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-    crossorigin="anonymous"></script>
+    <!--Bootstrap JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        crossorigin="anonymous"></script>
 
 
 </body>
