--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.couldflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.couldflare.com/ajax/libs/font-awesome/4.7.8/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/fontawesome/css/all.min.css">
+  
 </head>
 
 <body>
@@ -72,7 +73,7 @@
               <a class="nav-link" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">contact</a>
+              <a class="nav-link" href="#">Slides</a>
             </li>
 
           </ul>
@@ -550,7 +551,6 @@
                   </div>
            
 
-  <!--contact page-->
 
   <!--Bootstrap JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
