--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digitale Trainer</title>
   <!--link css bootstrap-->
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style2.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.couldflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
