mettre les liens

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Launch Your Web Career
             From TN'Coders First Professional Web Institute
           </p>
-          <a href="#" class="btn btn-md text-center">More Information</a>
+          <a href="./contact.html" class="btn btn-md text-center">More Information</a>
         </div>
 
 
@@ -67,13 +67,13 @@
               <a class="nav-link active" aria-current="page" href="#">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Team</a>
+              <a class="nav-link" href="#team">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Slides</a>
+              <a class="nav-link" href="#slides">Slides</a>
             </li>
 
           </ul>
@@ -112,7 +112,7 @@
   <!--team represent section -->
   <section id="team" class="pb-5">
     <div class="container">
-      <h5 class="section-title h1">OUR TEAM</h5>
+      <h5 class="section-title h1" id="team">OUR TEAM</h5>
       <div class="row">
         <!-- Team member -->
         <div class="col-xs-12 col-sm-6 col-md-4">
@@ -467,7 +467,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="section-header text-center">
-            <h2>Our Services</h2>
+            <h2 id="services">Our Services</h2>
             <p>Learn how to design and create a website with our web design tutorials.</p>
           </div>
         </div>
@@ -528,7 +528,7 @@
                       <div class="carousel-item">
                         <img src="./img/homepagephoto/18.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5>Move Me</h5>
+                          <h5 id="slides">Move Me</h5>
                           
                         </div>
                       </div>
