--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <ul class="nav">
 
               <li class="nav-item">
-                <a class="nav-link" href="./signin.html">Sign In</a>
+                <a class="nav-link" href="./signin login/signin.html">Sign In</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./login.html">Log In</a>
+                <a class="nav-link" href="./signin login/login.html">Log In</a>
               </li>
             </ul>
           </nav>
