--- a/signin login/signin.html
+++ b/signin login/signin.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="./../css/fontawesome/css/all.min.css">
 </head>
 <body>
 	<img class="wave" src="img/wave.png">
@@ -28,7 +29,7 @@
            		</div>
            		<div class="input-div one">
            		   <div class="i">
-           		   		<i class="fas fa-email"></i>
+					<i class="fas fa-user"></i>
            		   </div>
            		   <div class="div">
            		   		<h5>Email Adress</h5>
